--- a/SEPraktikum/Anwendungskern/Anwendungskern.csproj
+++ b/SEPraktikum/Anwendungskern/Anwendungskern.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{22E855AA-DE16-4254-ABC3-A413790289E9}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{933F4F12-DE06-4E09-8A8D-1AD192363219}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Finances</RootNamespace>
-    <AssemblyName>Finances</AssemblyName>
+    <RootNamespace>Anwendungskern</RootNamespace>
+    <AssemblyName>Anwendungskern</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -23,7 +23,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\XML\Finances.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -34,22 +33,6 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
-  <ItemGroup>
-    <Compile Include="Models\Account.cs" />
-    <Compile Include="Models\AutoDebit.cs" />
-    <Compile Include="Models\CreditCard.cs" />
-    <Compile Include="Models\PaymentInfo.cs" />
-    <Compile Include="Models\PayPal.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Base\Base.csproj">
-      <Project>{4FCA7BC2-B5FD-4192-81BD-A86B18F78339}</Project>
-      <Name>Base</Name>
-    </ProjectReference>
-  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
