--- a/SEPraktikum/SEPraktikum/EntryPoint.csproj
+++ b/SEPraktikum/SEPraktikum/EntryPoint.csproj
@@ -147,17 +147,29 @@
       <Project>{4FCA7BC2-B5FD-4192-81BD-A86B18F78339}</Project>
       <Name>Base</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Cinema\Cinema.csproj">
+    <ProjectReference Include="..\Cinema\Kino.csproj">
       <Project>{FFDCF527-C890-4B77-A201-292D5E0CE18F}</Project>
-      <Name>Cinema</Name>
+      <Name>Kino</Name>
     </ProjectReference>
     <ProjectReference Include="..\Database\Database.csproj">
       <Project>{D54D34FF-8ABC-4AEE-9190-7D0E48D49FED}</Project>
       <Name>Database</Name>
     </ProjectReference>
-    <ProjectReference Include="..\TicketOperations\TicketOperations.csproj">
+    <ProjectReference Include="..\Finances\Finanzen.csproj">
+      <Project>{22E855AA-DE16-4254-ABC3-A413790289E9}</Project>
+      <Name>Finanzen</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\GUI\GUI.csproj">
+      <Project>{723196A8-77B3-4EF6-9CAA-9C808924D210}</Project>
+      <Name>GUI</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TicketOperations\Kinokarten.csproj">
       <Project>{693E8C0C-D47E-4483-8755-3722DCB841D5}</Project>
-      <Name>TicketOperations</Name>
+      <Name>Kinokarten</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Users\Benutzer.csproj">
+      <Project>{16617112-8305-4A0C-911A-3EFF4573B7E1}</Project>
+      <Name>Benutzer</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
