--- a/SEPraktikum/TicketOperations/Kinokarten.csproj
+++ b/SEPraktikum/TicketOperations/Kinokarten.csproj
@@ -46,9 +46,8 @@
     <Compile Include="InternalInterfaceMembers\Interfaces\IKinokarteReservieren.cs" />
     <Compile Include="PublicInterfaceMembers\PublicFilmprogramm.cs" />
     <Compile Include="PublicInterfaceMembers\PublicKinokarte.cs" />
-    <Compile Include="InternalInterfaceMembers\KinokarteReservieren.cs" />
+    <Compile Include="InternalInterfaceMembers\KinokartenReservieren.cs" />
     <Compile Include="PublicInterfaceMembers\PublicVorstellung.cs" />
-    <Compile Include="PublicInterfaceMembers\RegestrierterKundeKinokartenReservierung.cs" />
     <Compile Include="PublicInterfaceMembers\RegistrierterKundeKinokartenReservieren.cs" />
     <Compile Include="Models\Buchung.cs" />
     <Compile Include="PublicInterfaceMembers\Interfaces for public members\IPublicKinokarte.cs" />
@@ -70,21 +69,21 @@
       <Project>{4FCA7BC2-B5FD-4192-81BD-A86B18F78339}</Project>
       <Name>Base</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Cinema\Cinema.csproj">
+    <ProjectReference Include="..\Cinema\Kino.csproj">
       <Project>{FFDCF527-C890-4B77-A201-292D5E0CE18F}</Project>
-      <Name>Cinema</Name>
+      <Name>Kino</Name>
     </ProjectReference>
     <ProjectReference Include="..\Database\Database.csproj">
       <Project>{D54D34FF-8ABC-4AEE-9190-7D0E48D49FED}</Project>
       <Name>Database</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Users\Users.csproj">
+    <ProjectReference Include="..\Users\Benutzer.csproj">
       <Project>{16617112-8305-4A0C-911A-3EFF4573B7E1}</Project>
-      <Name>Users</Name>
+      <Name>Benutzer</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Controller\" />
+    <Folder Include="InternalInterfaceMembers\Controller\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
