--- a/SEPraktikum/Cinema/Kino.csproj
+++ b/SEPraktikum/Cinema/Kino.csproj
@@ -38,6 +38,7 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="InterfaceMembers\IKinoInformationen.cs" />
     <Compile Include="Models\Film.cs" />
     <Compile Include="InterfaceMembers\IFilm.cs" />
     <Compile Include="InterfaceMembers\IKinosaal.cs" />
