--- a/SEPraktikum/SystemAdministration/SystemAdministration.csproj
+++ b/SEPraktikum/SystemAdministration/SystemAdministration.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{FFDCF527-C890-4B77-A201-292D5E0CE18F}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{869A189E-5C21-49FF-AEDF-A8F449569FD4}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Cinema</RootNamespace>
-    <AssemblyName>Cinema</AssemblyName>
+    <RootNamespace>SystemAdministration</RootNamespace>
+    <AssemblyName>SystemAdministration</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -23,7 +23,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\XML\Cinema.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -34,41 +33,23 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
   <ItemGroup>
-    <Compile Include="InterfaceMembers\IKinoAdministration.cs" />
-    <Compile Include="InterfaceMembers\IKinoInformationen.cs" />
-    <Compile Include="InterfaceMembers\KinoAdministration.cs" />
-    <Compile Include="Models\Film.cs" />
-    <Compile Include="InterfaceMembers\IFilm.cs" />
-    <Compile Include="InterfaceMembers\IKinosaal.cs" />
-    <Compile Include="InterfaceMembers\ISitz.cs" />
-    <Compile Include="Models\Kinosaal.cs" />
-    <Compile Include="Models\Sitz.cs" />
-    <Compile Include="Models\SitzIdentifikator.cs" />
+    <ProjectReference Include="..\Cinema\Kino.csproj">
+      <Project>{FFDCF527-C890-4B77-A201-292D5E0CE18F}</Project>
+      <Name>Kino</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TicketOperations\Kinokarten.csproj">
+      <Project>{693E8C0C-D47E-4483-8755-3722DCB841D5}</Project>
+      <Name>Kinokarten</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.CSharp" />
+    <Compile Include="Interfaces\Administration.cs" />
+    <Compile Include="Interfaces\IAdministration.cs" />
+    <Compile Include="SystemTest.cs" />
+  </ItemGroup>
+  <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="System.Deployment" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.XML" />
-    <Reference Include="System.Xml.Linq" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Base\Base.csproj">
-      <Project>{4FCA7BC2-B5FD-4192-81BD-A86B18F78339}</Project>
-      <Name>Base</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Database\Database.csproj">
-      <Project>{D54D34FF-8ABC-4AEE-9190-7D0E48D49FED}</Project>
-      <Name>Database</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
