--- a/SEPraktikum/TestAnwendungskern/TestAnwendungskern.csproj
+++ b/SEPraktikum/TestAnwendungskern/TestAnwendungskern.csproj
@@ -61,9 +61,17 @@
       <Project>{FFDCF527-C890-4B77-A201-292D5E0CE18F}</Project>
       <Name>Kino</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Database\Database.csproj">
+      <Project>{D54D34FF-8ABC-4AEE-9190-7D0E48D49FED}</Project>
+      <Name>Database</Name>
+    </ProjectReference>
     <ProjectReference Include="..\TicketOperations\Kinokarten.csproj">
       <Project>{693E8C0C-D47E-4483-8755-3722DCB841D5}</Project>
       <Name>Kinokarten</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Users\Benutzer.csproj">
+      <Project>{16617112-8305-4A0C-911A-3EFF4573B7E1}</Project>
+      <Name>Benutzer</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
