--- a/SEPraktikum/Anwendungskern/Fassade.csproj
+++ b/SEPraktikum/Anwendungskern/Fassade.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{933F4F12-DE06-4E09-8A8D-1AD192363219}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Anwendungskern</RootNamespace>
-    <AssemblyName>Anwendungskern</AssemblyName>
+    <RootNamespace>Fassade</RootNamespace>
+    <AssemblyName>Fassade</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -38,8 +38,8 @@
   </PropertyGroup>
   <ItemGroup />
   <ItemGroup>
-    <Compile Include="Schnittstelle\Besucher.cs" />
-    <Compile Include="Schnittstelle\IBesucher.cs" />
+    <Compile Include="Schnittstelle\FassadeBesucher.cs" />
+    <Compile Include="Schnittstelle\IFassadeBesucher.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -52,6 +52,10 @@
     <ProjectReference Include="..\Cinema\Kino.csproj">
       <Project>{FFDCF527-C890-4B77-A201-292D5E0CE18F}</Project>
       <Name>Kino</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Database\Database.csproj">
+      <Project>{D54D34FF-8ABC-4AEE-9190-7D0E48D49FED}</Project>
+      <Name>Database</Name>
     </ProjectReference>
     <ProjectReference Include="..\TicketOperations\Kinokarten.csproj">
       <Project>{693E8C0C-D47E-4483-8755-3722DCB841D5}</Project>
