--- a/SEPraktikum/TestAnwendungskern/TestAnwendungskern.csproj
+++ b/SEPraktikum/TestAnwendungskern/TestAnwendungskern.csproj
@@ -49,9 +49,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Anwendungskern\Anwendungskern.csproj">
+    <ProjectReference Include="..\Anwendungskern\Fassade.csproj">
       <Project>{933F4F12-DE06-4E09-8A8D-1AD192363219}</Project>
-      <Name>Anwendungskern</Name>
+      <Name>Fassade</Name>
     </ProjectReference>
     <ProjectReference Include="..\Base\Base.csproj">
       <Project>{4FCA7BC2-B5FD-4192-81BD-A86B18F78339}</Project>
