--- a/SEPraktikum/SEPraktikum/EntryPoint.csproj
+++ b/SEPraktikum/SEPraktikum/EntryPoint.csproj
@@ -65,24 +65,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controller\HauptmenuController.cs" />
-    <Compile Include="Controller\KinosaalVerwaltungController.cs" />
-    <Compile Include="Controller\AdministratorController.cs" />
-    <Compile Include="Controller\AdressController.cs" />
-    <Compile Include="Controller\BookingController.cs" />
-    <Compile Include="Controller\CinemaBrowsingController.cs" />
-    <Compile Include="Controller\CustomerController.cs" />
-    <Compile Include="Controller\EmployeeController.cs" />
-    <Compile Include="Controller\FilmprogramController.cs" />
-    <Compile Include="Controller\ManagementController.cs" />
-    <Compile Include="Controller\MovieController.cs" />
-    <Compile Include="Controller\MovieTheatreController.cs" />
-    <Compile Include="Controller\ProductController.cs" />
-    <Compile Include="Controller\ReservationController.cs" />
-    <Compile Include="Controller\SeatController.cs" />
-    <Compile Include="Controller\ShowController.cs" />
-    <Compile Include="Controller\TicketController.cs" />
-    <Compile Include="Controller\UserController.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -139,9 +121,7 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\Base\Base.csproj">
       <Project>{4FCA7BC2-B5FD-4192-81BD-A86B18F78339}</Project>
